--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,12 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "io.realm:realm-gradle-plugin:5.11.0"
     }
 }
 
@@ -19,7 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
@@ -34,10 +33,10 @@ ext {
     buildToolsVersion = '28.0.3'
     RetrofitVersion = '2.5.0'
     OkHttpVersion = '3.12.1'
-    ankoVersion='0.10.8'
-    gsonVersion='2.8.5'
-    timberVersion='4.7.1'
-    archVersion='2.0.0'
-    viewModelVersion='2.0.0'
+    ankoVersion = '0.10.8'
+    gsonVersion = '2.8.5'
+    timberVersion = '4.7.1'
+    archVersion = '2.0.0'
+    viewModelVersion = '2.0.0'
     ext.daggerVersion = '2.21'
 }
