Completed listing and pagination.
Signed-off-by: Aftab Ali <aftab.a.sikander@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -176,6 +176,9 @@ dependencies {
     implementation daggerInjection.values()
     implementation extras.values()
     implementation imageLoadingDependencies.values()
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     kapt compileDep.values()
 
 
