--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,13 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "io.realm:realm-gradle-plugin:5.11.0"
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
@@ -18,7 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
 
